Fix 2FA page columns overflowing at high display scale

--- a/warehouse/static/sass/blocks/_twofa-login.scss
+++ b/warehouse/static/sass/blocks/_twofa-login.scss
@@ -1,5 +1,4 @@
 /* SPDX-License-Identifier: Apache-2.0 */
-
 @use "../settings/breakpoints";
 @use "../settings/colours";
 @use "../settings/grid";
@@ -14,21 +13,19 @@
     </div>
   </div>
 */
-
 .twofa-login {
   @media only screen and (min-width: breakpoints.$tablet) {
     display: flex;
   }
 
-  &__method:first-of-type {
+  &__method {
     @media only screen and (min-width: breakpoints.$tablet) {
-      flex-shrink: 0;
+      flex: 1;
     }
   }
 
   &__method--padded {
     padding: grid.$spacing-unit 0;
-
     @media only screen and (max-width: breakpoints.$tablet) {
       padding: 0 0 grid.$spacing-unit;
     }
@@ -38,7 +35,6 @@
     margin: 0 grid.$spacing-unit * 2;
     width: 2px;
     background-image: linear-gradient(to bottom, colours.$border-color, colours.$white);
-
     @media only screen and (max-width: breakpoints.$tablet) {
       margin: 0 0 grid.$spacing-unit;
       width: 100%;
